--- a/diary/backend/.env
+++ b/diary/backend/.env
@@ -1,10 +1,11 @@
 PORT=5000
 DB_NAME=diary
 DB_USER=postgres
-DB_PASSWOPD=
-DB_HOST=127.0.0.1
+DB_PASSWORD=123409876
+DB_HOST=localhost
 DB_PORT=5432
 JWT_ACCESS_SECRET=dairysecretkeybackaccess
 JWT_REFRESH_SECRET=dairysecretkeybackrefresh
 JWT_ACCESS_EXPIRES=15m
 JWT_REFRESH_EXPIRES=7d
+NODE_ENV=production
