--- a/diary/frontend/.gitignore
+++ b/diary/frontend/.gitignore
@@ -11,7 +11,8 @@ node_modules
 dist
 dist-ssr
 *.local
-node_modules/
+frontent/node_modules/
+backend/node_modules/
 .idea/
 # Editor directories and files
 .vscode/*
