--- a/diary/backend/.env
+++ b/diary/backend/.env
@@ -1,8 +1,8 @@
 PORT=5000
 DB_NAME=diary
 DB_USER=postgres
-DB_PASSWORD=123409876
-DB_HOST=localhost
+DB_PASSWORD=qwerty
+DB_HOST=127.0.0.1
 DB_PORT=5432
 JWT_ACCESS_SECRET=dairysecretkeybackaccess
 JWT_REFRESH_SECRET=dairysecretkeybackrefresh
