--- a/diary/backend/.env
+++ b/diary/backend/.env
@@ -1,7 +1,7 @@
 PORT=5000
 DB_NAME=diary
 DB_USER=postgres
-DB_PASSWORD=123409876
+DB_PASSWORD=qwerty
 DB_HOST=127.0.0.1
 DB_PORT=5432
 JWT_ACCESS_SECRET=dairysecretkeybackaccess
