--- a/diary/backend/package.json
+++ b/diary/backend/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
+    "multer": "^2.0.0",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.6"
