--- a/diary/backend/package.json
+++ b/diary/backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
     "multer": "^2.0.0",
+    "nodemailer": "^7.0.3",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.6"
