add user data for nodemailer

--- a/diary/backend/.env
+++ b/diary/backend/.env
@@ -9,3 +9,5 @@ JWT_REFRESH_SECRET=dairysecretkeybackrefresh
 JWT_ACCESS_EXPIRES=15m
 JWT_REFRESH_EXPIRES=7d
 NODE_ENV=production
+SMTP_USER=mizv01@inbox.ru
+SMTP_PASSWORD=fpccqrPypM3vcpxxT7Gz
