--- a/diary/backend/package.json
+++ b/diary/backend/package.json
@@ -22,9 +22,11 @@
     "ms": "^2.1.3",
     "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
+    "p-queue": "^6.6.2",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.6"
+    "sequelize": "^6.37.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
